# Snake2021

./: .gitignore  CMakeLists.txt
inc/: CFood.hpp  CGame.hpp  CGameGrid.hpp  CSnake.hpp  CUtility.hpp  Globals.hpp  kbhit.hpp
interfaces/: IEntity.hpp
src/: CFood.cpp  CGame.cpp  CGameGrid.cpp  CSnake.cpp  CUtility.cpp  Main.cpp  kbhit.cpp
